# Course_work_2

./: .gitignore  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_file_handler_py.html  z_145eef247bfb46b6_hh_api_py.html  z_145eef247bfb46b6_user_interface_py.html  z_145eef247bfb46b6_vacancy_py.html
src/: file_handler.py  hh_api.py  user_interface.py  vacancy.py
tests/: conftest.py  test_file_handler.py  test_hh_api.py  test_main.py  test_user_interface.py  test_vacancy.py
