[project]
name = "course-work-2"
version = "0.1.0"
description = ""
authors = [
    {name = "ildaryagudin",email = "ilyagudin70@gmail.com"}
]

requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
